--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,97 @@
 $primary-color: #444;
+$secondary-color: #eece1a;
+$showHomeImage: true;
+$homeImage: url(../img/work-background.jpg);
+$backgroundOpacity: 0.9;
+
+@mixin easeOut{
+ transition: all 1.5s ease-out
+}
+@mixin background {
+    @if $showHomeImage{
+        background: $homeImage;
+        background-attachment: fixed;
+        background-size: cover; 
+
+        &:after{
+        content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: $primary-color;
+        z-index: -1;
+        background: rgba($color: $primary-color, $alpha:$backgroundOpacity);
+        }
+    }
+    
+}
+
+*{
+    box-sizing: border-box;
+}
 
 body{
 background: $primary-color;
 color: #fff;
+height: 100%;
+margin: 0;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+line-height: 1.5;
+@include background();
+   
 }
+//Headings
+h1,
+h2{
+    margin: 0;
+    font-weight: 400;
+    &.lg-heading{
+        font-size: 6rem;
+    }
+    &.sm-heading{
+        margin-bottom: 2rem;
+        padding: 0.2rem 1rem;
+        background: rgba(lighten($color: $primary-color, $amount: 2),0.5);
+    }
+}
+a{
+    text-decoration: none;
+    color: white;
+}
+header{
+    position: fixed;
+    z-index: 2;
+    width: 100%;
+}
+.text-secondary{
+    color: $secondary-color;
+}
+main{
+    padding: 4rem;
+    height: 100%;
+    .icons{
+        margin-top: 1rem;
+        a{
+            padding: 0.4rem;
+            &:hover{
+                color:$secondary-color;
+                @include easeOut();
+            }
+        }
+    }
+    &#home {
+        overflow: hidden;
+        h1{
+            margin-top: 20vh;
+        }
+    }
+}
+
+
+
+
+
+
+
