--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,9 +2,10 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $showHomeImage: true;
 $homeImage: url(../img/work-background.jpg);
+$portraitImage: url(../img/profile3.jpg);
 $backgroundOpacity: 0.9;
 @mixin easeOut{
-    transition: all 1.5s ease-out
+    transition: all 0.5s ease-out
    }
    @mixin background {
     @if $showHomeImage{
