--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,9 +4,13 @@ $showHomeImage: true;
 $homeImage: url(../img/work-background.jpg);
 $portraitImage: url(../img/profile3.jpg);
 $backgroundOpacity: 0.9;
+
 @mixin easeOut{
     transition: all 0.5s ease-out
    }
+@mixin hoverOut {
+    transition: all 0.5s ease-out
+}
    @mixin background {
     @if $showHomeImage{
         background: $homeImage;
@@ -27,7 +31,11 @@ $backgroundOpacity: 0.9;
     }  
 }
 @import '_menu.scss';
-
+@import 'responsive.scss';
+@include mediaSmall;
+@include mediaMedium;
+@include mediaLarge;
+@include mediaXlarge;
 *{
     box-sizing: border-box;
 }
@@ -40,7 +48,7 @@ margin: 0;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 line-height: 1.5;
 @include background();
-   
+  
 }
 //Headings
 h1,
@@ -49,42 +57,47 @@ h2{
     font-weight: 400;
     &.lg-heading{
         font-size: 6rem;
+        
     }
     &.sm-heading{
         margin-bottom: 2rem;
         padding: 0.2rem 1rem;
         background: rgba(lighten($color: $primary-color, $amount: 2),0.5);
+       
     }
-}
-a{
-    text-decoration: none;
-    color: white;
 }
 header{
     position: fixed;
-    z-index: 2;
     width: 100%;
 }
 .text-secondary{
     color: $secondary-color;
 }
 main{
+    
     padding: 4rem;
     height: 100%;
     .icons{
         margin-top: 1rem;
+        
         a{
             padding: 0.4rem;
+            text-decoration: none;
+            color: white;
+            @include easeOut();
             &:hover{
-                color:$secondary-color;
+                cursor: pointer;
+                
                 @include easeOut();
+                color:$secondary-color;
             }
         }
     }
     &#home {
         overflow: hidden;
+        
         h1{
-            margin-top: 20vh;
+            margin-top: 20vh;   
         }
     }
 }
