--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,7 +23,7 @@ $backgroundOpacity: 0.9;
         top: 0;
         right: 0;
         width: 100%;
-        height: 100%;
+        height: 180%;
         background: $primary-color;
         z-index: -1;
         background: rgba($color: $primary-color, $alpha:$backgroundOpacity);
@@ -31,11 +31,7 @@ $backgroundOpacity: 0.9;
     }  
 }
 @import '_menu.scss';
-@import 'responsive.scss';
-@include mediaSmall;
-@include mediaMedium;
-@include mediaLarge;
-@include mediaXlarge;
+
 *{
     box-sizing: border-box;
 }
@@ -76,7 +72,7 @@ header{
 main{
     
     padding: 4rem;
-    height: 100%;
+    min-height: calc(180vh - 60px);
     .icons{
         margin-top: 1rem;
         
@@ -84,12 +80,10 @@ main{
             padding: 0.4rem;
             text-decoration: none;
             color: white;
-            @include easeOut();
+           
             &:hover{
-                cursor: pointer;
-                
-                @include easeOut();
                 color:$secondary-color;
+                @include easeOut(); 
             }
         }
     }
@@ -101,10 +95,60 @@ main{
         }
     }
 }
-
-
-
-
-
-
-
+//About page
+.about-info{
+    display: grid;
+    grid-template-areas: 'bioimage bio bio';
+    grid-template-columns: repeat(3,1fr);
+    overflow: hidden;
+}
+.bio-image{
+    grid-area: bioimage;
+    margin: auto;
+    border-radius: 50%;
+    border: $secondary-color 3px solid;
+}
+.bio{
+    grid-area: bio;
+    font-size: 1.5rem;
+}
+.container{
+    width: 100%;
+    background: lighten($color: $primary-color, $amount: 5);
+}
+.skills{
+    text-align: right;
+    padding-right: 20px;
+    color: white;
+    background-color: #424242;
+    border-bottom: $secondary-color 2px solid;
+    &.html{
+        width: 80%;
+    }
+    
+    &.css{
+        width: 70%;
+    }
+    &.js{
+        width: 65%;
+    }
+    &.react{
+        width: 50%;
+    }
+    &.git{
+        width: 50%;
+    }
+    
+}
+#main-footer{
+    text-align: center;
+    padding: 1rem;
+    background: darken($color: $primary-color, $amount: 10);
+    height: 60px;
+}
+//Media Queries
+@import 'responsive.scss';
+@include mediaSmall;
+@include mediaMedium;
+@include mediaLarge;
+@include mediaXlarge;
