--- a/scss/main.css
+++ b/scss/main.css
@@ -66,7 +66,6 @@
   width: 50%;
   height: 100vh;
   overflow: hidden;
-  z-index: 3 !important;
 }
 
 .menu-nav {
@@ -78,7 +77,6 @@
           transform: translate3d(0, -100%, 0);
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
-  z-index: 3 !important;
 }
 
 .menu-nav.show {
@@ -106,7 +104,6 @@
   height: 250px;
   border-radius: 50%;
   border: solid 3px #eece1a;
-  z-index: 3;
 }
 
 .menu .nav-item {
@@ -161,50 +158,6 @@
           transition-delay: 0.4s;
 }
 
-@media screen and (max-width: 500px) {
-  main#home h1 {
-    margin-top: 10vh;
-  }
-}
-
-@media screen and (max-width: 678px) {
-  main {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    text-align: center;
-  }
-  main .lg-heading {
-    line-height: 1;
-    margin-bottom: 1rem;
-  }
-  ul.menu-nav, div.menu-branding {
-    float: none;
-    width: 100%;
-    min-height: 0;
-  }
-  ul.menu-nav.show, div.menu-branding.show {
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-  }
-  .menu-nav {
-    height: 75vh;
-    -webkit-transform: translate3d(-100%, 0, 0);
-            transform: translate3d(-100%, 0, 0);
-    font-size: 24px;
-  }
-  .menu-branding {
-    height: 25vh;
-    -webkit-transform: translate3d(100%, 0, 0);
-            transform: translate3d(100%, 0, 0);
-  }
-  .menu-branding .portrait {
-    background: url("../img/profile3small.jpg");
-    width: 150px;
-    height: 150px;
-  }
-}
-
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -228,7 +181,7 @@ body:after {
   top: 0;
   right: 0;
   width: 100%;
-  height: 100%;
+  height: 180%;
   background: #444;
   z-index: -1;
   background: rgba(68, 68, 68, 0.9);
@@ -263,7 +216,7 @@ header {
 
 main {
   padding: 4rem;
-  height: 100%;
+  min-height: calc(180vh - 60px);
 }
 
 main .icons {
@@ -274,15 +227,12 @@ main .icons a {
   padding: 0.4rem;
   text-decoration: none;
   color: white;
-  -webkit-transition: all 0.5s ease-out;
-  transition: all 0.5s ease-out;
 }
 
 main .icons a:hover {
-  cursor: pointer;
+  color: #eece1a;
   -webkit-transition: all 0.5s ease-out;
   transition: all 0.5s ease-out;
-  color: #eece1a;
 }
 
 main#home {
@@ -291,5 +241,125 @@ main#home {
 
 main#home h1 {
   margin-top: 20vh;
+}
+
+.about-info {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: 'bioimage bio bio';
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  overflow: hidden;
+}
+
+.bio-image {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: bioimage;
+  margin: auto;
+  border-radius: 50%;
+  border: #eece1a 3px solid;
+}
+
+.bio {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-area: bio;
+  font-size: 1.5rem;
+}
+
+.container {
+  width: 100%;
+  background: #515151;
+}
+
+.skills {
+  text-align: right;
+  padding-right: 20px;
+  color: white;
+  background-color: #424242;
+  border-bottom: #eece1a 2px solid;
+}
+
+.skills.html {
+  width: 80%;
+}
+
+.skills.css {
+  width: 70%;
+}
+
+.skills.js {
+  width: 65%;
+}
+
+.skills.react {
+  width: 50%;
+}
+
+.skills.git {
+  width: 50%;
+}
+
+#main-footer {
+  text-align: center;
+  padding: 1rem;
+  background: #2b2b2b;
+  height: 60px;
+}
+
+@media screen and (max-width: 500px) {
+  main#home h1 {
+    margin-top: 10vh;
+  }
+}
+
+@media screen and (max-width: 678px) {
+  main {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    min-height: calc(260vh - 60px);
+  }
+  main .lg-heading {
+    line-height: 1;
+    margin-bottom: 1rem;
+  }
+  ul.menu-nav, div.menu-branding {
+    float: none;
+    width: 100%;
+    min-height: 0;
+  }
+  ul.menu-nav.show, div.menu-branding.show {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  .menu-nav {
+    height: 75vh;
+    -webkit-transform: translate3d(-100%, 0, 0);
+            transform: translate3d(-100%, 0, 0);
+    font-size: 24px;
+  }
+  .menu-branding {
+    height: 25vh;
+    -webkit-transform: translate3d(100%, 0, 0);
+            transform: translate3d(100%, 0, 0);
+  }
+  .menu-branding .portrait {
+    background: url("../img/profile3small.jpg");
+    width: 150px;
+    height: 150px;
+  }
+  .about-info {
+        grid-template-areas: 'bioimage' 'bio';
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  body:after {
+    content: "";
+    height: 290%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
