--- a/scss/main.scss
+++ b/scss/main.scss
@@ -66,7 +66,7 @@ h2{
 header{
     position: fixed;
     width: 100%;
-    z-index: 2;
+    z-index: 0;
 }
 .text-secondary{
     color: $secondary-color;
@@ -179,8 +179,30 @@ main{
     color: #333;
     background: lighten($color: $primary-color, $amount: 50);
 }
+//Contact Page
+.contact-info{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+    div{
+        font-size: 2rem;
+        border: 3px white solid;
+        padding: 1.5rem 2.5rem;
+        margin-bottom: 1rem;
+        @include easeOut();
 
-
+        &:hover{
+            padding: 0.5rem 1.5rem;
+            background-color: $secondary-color;
+            
+            span{
+                color: $primary-color;
+            }
+        }
+    }
+}
 
 //Footer
 #main-footer{
