--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,7 +37,7 @@ $backgroundOpacity: 0.9;
 body{
 background: $primary-color;
 color: #fff;
-height: 100%;
+height: 100vh;
 margin: 0;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 line-height: 1.5;
